--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "meteor build ../output/vue --directory",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "visualize": "meteor --production --extra-packages bundle-visualizer",
+    "type": "module"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
