--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/meteor": "^2.8.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
+    "meteor-vite": "^1.5.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.7",
